Docs: Fixed text not wrapping to the next line in code blocks

--- a/Docs/static/css/custom.css
+++ b/Docs/static/css/custom.css
@@ -306,3 +306,7 @@ nav#sidebar > div.highlightable {
 		transition: none;
 	}
 }
+
+code {
+	white-space: normal;
+}
